# collab-vm-server-old-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: collab-vm-server.yml
cmake/: FindCairo.cmake
src/: CollabVMServer.h  CollabVMUser.h  Common.h  Logger.cpp  Logger.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h  User.h  UserList.h  Webserver.h  WebsocketServer.cpp  WebsocketServer.h  main.cpp
src/VMControllers/Common/: ControllerStatus.h  QEMUAudio.cpp  QEMUAudio.h  Surface.cpp  Surface.h  VMController.h  VNCClient.cpp  VNCClient.h
